--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
-<project>
+ travis <project>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fi.hsl.transitdata</groupId>
     <artifactId>transitdata-vehicleposition-processor</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
