Use vehicle timestamp validator to filter vehicles with invalid timestamps

--- a/src/main/resources/environment.conf
+++ b/src/main/resources/environment.conf
@@ -12,3 +12,10 @@ pulsar {
     topic=${?PULSAR_PRODUCER_TOPIC}
   }
 }
+
+processor {
+  vehicleposition {
+    maxTimeDifference = 5 seconds # Discard vehicle positions when timestamp differs from current time
+    maxTimeDifference = ${?PROCESSOR_VEHICLE_POSITION_MAX_TIME_DIFFERENCE}
+  }
+}
