Allow configuring HFP occu -> GTFS RT occupancy status mapping

--- a/src/main/resources/environment.conf
+++ b/src/main/resources/environment.conf
@@ -17,5 +17,31 @@ processor {
   vehicleposition {
     maxTimeDifference = 5 seconds # Discard vehicle positions when timestamp differs from current time
     maxTimeDifference = ${?PROCESSOR_VEHICLE_POSITION_MAX_TIME_DIFFERENCE}
+    occuLevels = [ //Maps occupancy level to GTFS RT occupancy status, e.g. if 0 < occu <= 5, status will be EMPTY
+      {
+        status = EMPTY,
+        occu = 0
+      },
+      {
+        status = MANY_SEATS_AVAILABLE,
+        occu = 5
+      },
+      {
+        status = FEW_SEATS_AVAILABLE,
+        occu = 20
+      },
+      {
+        status = STANDING_ROOM_ONLY,
+        occu = 50
+      },
+      {
+        status = CRUSHED_STANDING_ROOM_ONLY,
+        occu = 70
+      },
+      {
+        status = FULL,
+        occu = 90
+      }
+    ]
   }
 }
