--- a/src/main/resources/environment.conf
+++ b/src/main/resources/environment.conf
@@ -2,10 +2,13 @@ include "common.conf"
 
 pulsar {
   consumer {
-    topic="hfp-data"
-    topic=${?PULSAR_CONSUMER_TOPIC}
+    multipleTopics=true
+    multipleTopics=${?PULSAR_CONSUMER_ENABLE_MULTIPLE_TOPICS}
+    topicsPattern="persistent://public/default/(hfp-data|passenger-count)"
+    topicsPattern=${?PULSAR_CONSUMER_MULTIPLE_TOPICS_PATTERN}
     subscription="transitdata-vehicleposition-processor-subscription"
     subscription=${?PULSAR_CONSUMER_SUBSCRIPTION}
+
   }
   producer {
     topic="gtfs-vehicle-position"
@@ -17,6 +20,33 @@ processor {
   vehicleposition {
     maxTimeDifference = 5 seconds # Discard vehicle positions when timestamp differs from current time
     maxTimeDifference = ${?PROCESSOR_VEHICLE_POSITION_MAX_TIME_DIFFERENCE}
+    occuLevelsVehicleLoadRatio = [
+      {
+        status = EMPTY,
+        loadRatio = 0
+      },
+      {
+        status = MANY_SEATS_AVAILABLE,
+        loadRatio = 0.5
+      },
+      {
+        status = FEW_SEATS_AVAILABLE,
+        loadRatio = 1
+      },
+      {
+        status = STANDING_ROOM_ONLY,
+        loadRatio = 1.5
+      },
+      {
+        status = CRUSHED_STANDING_ROOM_ONLY,
+        loadRatio = 2
+      },
+      {
+        status = FULL,
+        loadRatio = 2.5
+      }
+    ],
+
     occuLevels = [ //Maps occupancy level to GTFS RT occupancy status, e.g. if 0 < occu <= 5, status will be EMPTY
       {
         status = EMPTY,
