Add support for filtering passenger count based on vehicle number

--- a/src/main/resources/environment.conf
+++ b/src/main/resources/environment.conf
@@ -20,6 +20,8 @@ processor {
   vehicleposition {
     maxTimeDifference = 5 seconds # Discard vehicle positions when timestamp differs from current time
     maxTimeDifference = ${?PROCESSOR_VEHICLE_POSITION_MAX_TIME_DIFFERENCE}
+    passengerCountEnabledVehicles = "" #Comma-separated list of vehicles for which passenger count is enabled (e.g. "18/123,22/531")
+    passengerCountEnabledVehicles = ${?PASSENGER_COUNT_ENABLED_VEHICLES}
     occuLevelsVehicleLoadRatio = [
       {
         status = EMPTY,
