Add configuration option for transport modes for which GTFS-RT ADDED trips are enabled for

--- a/src/main/resources/environment.conf
+++ b/src/main/resources/environment.conf
@@ -20,6 +20,8 @@ processor {
   vehicleposition {
     maxTimeDifference = 5 seconds # Discard vehicle positions when timestamp differs from current time
     maxTimeDifference = ${?PROCESSOR_VEHICLE_POSITION_MAX_TIME_DIFFERENCE}
+    addedTripEnabledModes = "bus,ubus" #Comma-separated list of transport modes for which GTFS-RT ADDED trips are enabled for
+    addedTripEnabledModes = ${?ADDED_TRIPS_ENABLED_MODES}
     passengerCountEnabledVehicles = "" #Comma-separated list of vehicles for which passenger count is enabled (e.g. "18/123,22/531")
     passengerCountEnabledVehicles = ${?PASSENGER_COUNT_ENABLED_VEHICLES}
     occuLevelsVehicleLoadRatio = [
@@ -48,7 +50,6 @@ processor {
         loadRatio = 0.9
       }
     ],
-
     occuLevels = [ //Maps occupancy level to GTFS RT occupancy status, e.g. if 0 < occu <= 5, status will be EMPTY
       {
         status = EMPTY,
