Add parameter maxDelayAllowed

--- a/src/main/resources/environment.conf
+++ b/src/main/resources/environment.conf
@@ -20,6 +20,8 @@ processor {
   vehicleposition {
     maxTimeDifference = 5 seconds # Discard vehicle positions when timestamp differs from current time
     maxTimeDifference = ${?PROCESSOR_VEHICLE_POSITION_MAX_TIME_DIFFERENCE}
+    maxDelayAllowed = 10800 seconds # Discard vehicle positions when vehicle is delayed more than this. 0 seconds disables filtering.
+    maxDelayAllowed = ${?PROCESSOR_VEHICLE_POSITION_MAX_DELAY_ALLOWED}
     addedTripEnabledModes = "bus,ubus" #Comma-separated list of transport modes for which GTFS-RT ADDED trips are enabled for
     addedTripEnabledModes = ${?ADDED_TRIPS_ENABLED_MODES}
     passengerCountEnabledVehicles = "" #Comma-separated list of vehicles for which passenger count is enabled (e.g. "18/123,22/531")
