Add environment variable pulsar.consumer.topics

--- a/src/main/resources/environment.conf
+++ b/src/main/resources/environment.conf
@@ -4,6 +4,8 @@ pulsar {
   consumer {
     multipleTopics=true
     multipleTopics=${?PULSAR_CONSUMER_ENABLE_MULTIPLE_TOPICS}
+    topics=["hfp-data, passenger-count"]
+    topics=${?PULSAR_CONSUMER_TOPICS}
     topicsPattern="persistent://public/default/(hfp-data|passenger-count)"
     topicsPattern=${?PULSAR_CONSUMER_MULTIPLE_TOPICS_PATTERN}
     subscription="transitdata-vehicleposition-processor-subscription"
